# minorseq

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  circle.yml
cmake/: ms-compilerflags.cmake  ms-config.cmake  ms-dependencies.cmake
doc/: CLERIC.md  FUSE.md  INSTALL.md  INTRODUCTION.md  JULIET.md  JULIETFLOW.md  MIXDATA.md
include/pacbio/: Version.h.in
include/pacbio/align/: SimdAlignment.h
include/pacbio/cleric/: Cleric.h  ClericSettings.h
include/pacbio/data/: ArrayBase.h  ArrayRead.h  FisherResult.h  MSA.h  MSAByColumn.h  MSAByRow.h  MSAColumn.h  MSARow.h  PlainOption.h  QvThresholds.h
include/pacbio/fuse/: Fuse.h  FuseSettings.h
include/pacbio/io/: BamParser.h  Utility.h
include/pacbio/juliet/: AminoAcidCaller.h  AminoAcidTable.h  AnalysisMode.h  ErrorEstimates.h  Haplotype.h  JsonToHtml.h  JulietSettings.h  JulietWorkflow.h  ResistanceCaller.h  TargetConfig.h  TransitionTable.h  VariantGene.h
include/pacbio/statistics/: Fisher.h  Tests.h
include/pacbio/util/: ExecUtils.h  Termcolor.h  Timer.h
scripts/ci/: build.sh  checkout-submodules.sh
scripts/minorvariant/: build.sh  julietflow
src/: AminoAcidCaller.cpp  AminoAcidTable.cpp  ArrayRead.cpp  CMakeLists.txt  ErrorEstimates.cpp  Fisher.cpp  JsonToHtml.cpp  MSA.cpp  MSAByColumn.cpp  MSAColumn.cpp  ResistanceCaller.cpp  SimdAlignment.cpp  TargetConfig.cpp  Tests.cpp  Timer.cpp  TransitionTable.cpp  Utility.cpp
src/tools/: Cleric.cpp  ClericSettings.cpp  Fuse.cpp  FuseSettings.cpp  JulietSettings.cpp  JulietWorkflow.cpp
src/tools/main/: cleric.cpp  fuse.cpp  juliet.cpp
tests/: CMakeLists.txt
tests/cram/: juliet_sb.t  juliet_sb_richqvs.t
tests/cram/siv/: julietflow.t
tests/data/julietflow/: flea99_97_1.bam  hxb2.fasta
tests/unit/: FisherTest.cpp
